# i2c_hackery

./: Cargo.toml  deny.toml  rustfmt.toml
src/: lib.rs  main.rs
