[package]
name = "i2c_hackery"
version = "0.1.0"
authors = ["Milo Mirate <mmirate@gmx.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.0"
bytes = { version = "1.0.1", features = ["serde"] }
embedded-hal = "0.2.4"
futures-util = "0.3.14"
intern-arc = "0.5.0"
lazy_format = "1.8.3"
linux-embedded-hal = "0.3.0"
oorandom = "11.1.3"
regex-automata = "0.1.9"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "sqlite", "macros" ] }
structopt = "0.3.21"
thiserror = "1.0.24"
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = { version = "0.1.5", features = ["sync","fs","io-util","net","signal"] }
tokio-tungstenite = "*"
