[package]
name = "i2c_hackery"
version = "0.1.0"
authors = ["Milo Mirate <mmirate@gmx.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.2"
bytes = { version = "1.0.1", features = ["serde"] }
embedded-hal = "0.2.5"
extend = "1.0.1"
futures-util = "0.3.15"
intern-arc = "0.5.0"
lazy_format = "1.8.4"
linux-embedded-hal = "0.3.0"
no-panic = "0.1.15"
oorandom = "11.1.3"
regex-automata = "0.1.10"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
thiserror = "1.0.25"
tokio = { version = "1.6.1", features = ["full"] }
tokio-stream = { version = "0.1.6", features = ["sync","fs","io-util","net","signal"] }
tokio-tungstenite = "0.14.0"

[profile.release]
lto = "thin"
